--- a/hire-me.html
+++ b/hire-me.html
@@ -18,7 +18,7 @@
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-no-images.html">Projects</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects.html">Projects</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
     </main>
     <footer class="page-footer">
         <div class="container">
-            <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
+            <a href="mailto:jon.nungaray@gmail.com">Contact me</a><a href="projects.html">Projects</a></div>
         </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
