--- a/senior-project.html
+++ b/senior-project.html
@@ -18,7 +18,7 @@
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-no-images.html">Projects</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects.html">Projects</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
                 </ul>
             </div>
@@ -38,23 +38,12 @@
                         <p>Ultimately not all our goals were met, however we able to successfully create a messaging application that did encrypt its messages. The only missing piece was having messages leave after being viewed.</p>
                     </div>
                     <div class="col-12 col-md-3 offset-md-1 meta">
-                        <div class="tags"><span class="meta-heading">Git Links</span><a href="#">API</a><a href="#">Client</a><span class="meta-heading">Date</span><span>03-27-2017</span></div>
-                    </div>
-                </div>
-                <div class="more-projects">
-                    <h3 class="text-center">More Projects</h3>
-                    <div class="row gallery">
-                        <div class="col-md-4 col-lg-3">
-                            <div class="item"><a href="#"><img class="img-fluid scale-on-hover" src="assets/img/nature/image2.jpg"></a></div>
-                        </div>
-                        <div class="col-md-4 col-lg-3">
-                            <div class="item"><a href="#"><img class="img-fluid scale-on-hover" src="assets/img/nature/image3.jpg"></a></div>
-                        </div>
-                        <div class="col-md-4 col-lg-3">
-                            <div class="item"><a href="#"><img class="img-fluid scale-on-hover" src="assets/img/tech/image4.jpg"></a></div>
-                        </div>
-                        <div class="col-md-4 col-lg-3">
-                            <div class="item"><a href="#"><img class="img-fluid scale-on-hover" src="assets/img/nature/image5.jpg"></a></div>
+                        <div class="tags">
+                            <span class="meta-heading">Git Links</span>
+                            <a href="https://github.com/JNungaray/SeniorProjectApi" target="_blank">API</a>
+                            <a href="https://github.com/JNungaray/SeniorProject" target="_blank">Client</a>
+                            <span class="meta-heading">Date</span>
+                            <span>03-27-2017</span>
                         </div>
                     </div>
                 </div>
@@ -63,7 +52,7 @@
     </main>
     <footer class="page-footer">
         <div class="container">
-            <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
+            <a href="mailto:jon.nungaray@gmail.com">Contact me</a><a href="projects.html">Projects</a></div>
         </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
