--- a/cv.html
+++ b/cv.html
@@ -30,8 +30,8 @@
                 <div class="avatar" style="background-image:url(&quot;assets/img/avatars/avatar.jpg&quot;);"></div>
                 <div class="about-me">
                     <p>Hello! I am <strong>Jonathan Nungaray</strong>. I currently work full time as a software developer for a development firm in Phoenix Arizona. I excel in both front-end and back-end development and have worked in many programming languages.</p>
-                    <a
-                        class="btn btn-outline-primary" role="button" href="#">Hire me</a>
+                    <!-- <a
+                        class="btn btn-outline-primary" role="button" href="hire-me.html">Hire me</a> -->
                 </div>
             </div>
         </section>
@@ -91,15 +91,23 @@
                         <div class="col-md-6">
                             <div class="skills portfolio-info-card">
                                 <h2>Skills</h2>
-                                <h3>HTML</h3>
-                                <div class="progress">
-                                    <div class="progress-bar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="sr-only">100%</span></div>
-                                </div>
                                 <h3>PHP</h3>
                                 <div class="progress">
-                                    <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span class="sr-only">90%</span></div>
+                                    <div class="progress-bar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span class="sr-only">100%</span></div>
                                 </div>
                                 <h3>JavaScript</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="sr-only">100%</span></div>
+                                </div>
+                                <h3>MySQL</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="sr-only">90%</span></div>
+                                </div>
+                                <h3>Vue</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="sr-only">90%</span></div>
+                                </div>
+                                <h3>AngularJS</h3>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="sr-only">80%</span></div>
                                 </div>
