--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                         <div class="project-card-no-image">
                             <h3>Senior Project</h3>
                             <h4>This is my senior project done for my final college course</h4><a class="btn btn-outline-primary btn-sm" role="button" href="senior-project.html">See More</a>
-                            <div class="tags"><span>Vue PHP</span></div>
+                            <div class="tags"><span style="color:grey">Vue PHP</span></div>
                         </div>
                     </div>
                 </div>
