more small stuff

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="avatar" style="background-image:url('assets/img/avatars/avatar.jpg');"></div>
                 <div class="about-me">
-                    <p>Hello! I am <strong>Jonathan Nungaray</strong>. I am a software developer and excel in both front-end and back-end development.</p><a class="btn btn-outline-primary" role="button" href="#">View my projects</a></div>
+                    <p>Hello! I am <strong>Jonathan Nungaray</strong>. I am a software developer and excel in both front-end and back-end development.</p><a class="btn btn-outline-primary" role="button" href="projects.html">View my projects</a></div>
             </div>
         </section>
     </main>
