added project presentation to page

--- a/senior-project.html
+++ b/senior-project.html
@@ -30,7 +30,12 @@
                 <div class="heading">
                     <h2>Senior project</h2>
                 </div>
-                <div class="image"><iframe allowfullscreen="" frameborder="0" width="560" height="315"></iframe></div>
+                <div class="image">
+                    <video style="width: 90%; height: auto;">
+                        <source src="assets/videos/presentation.mp4" type="video/mp4">
+                        The video is not supported
+                    </video>
+                </div>
                 <div class="row">
                     <div class="col-12 col-md-6 offset-md-1 info">
                         <h3>Description</h3>
