fixed video size

--- a/senior-project.html
+++ b/senior-project.html
@@ -31,7 +31,7 @@
                     <h2>Senior project</h2>
                 </div>
                 <div class="image">
-                    <video style="width: 90%; height: auto; margin: 0 auto;">
+                    <video style="width: 100%; height: auto;">
                         <source src="assets/videos/presentation.mp4" type="video/mp4">
                         The video is not supported
                     </video>
