--- a/cv.html
+++ b/cv.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>CV - JNungaray</title>
+    <title>Resume - JNungaray</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+    <style>
+        @media all and (max-width: 767px) {
+            .heading > h2 {
+                font-size: 2rem !important;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -19,7 +26,7 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="projects.html">Projects</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="cv.html">CV</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="cv.html">Resume</a></li>
                 </ul>
             </div>
         </div>
@@ -29,7 +36,11 @@
             <div class="container">
                 <div class="avatar" style="background-image:url(&quot;assets/img/avatars/avatar.jpg&quot;);"></div>
                 <div class="about-me">
-                    <p>Hello! I am <strong>Jonathan Nungaray</strong>. I currently work full time as a software developer for a development firm in Phoenix Arizona. I excel in both front-end and back-end development and have worked in many programming languages.</p>
+                    <p>
+                        Hello! I am <strong>Jonathan Nungaray</strong>. I currently work full time as a software
+                        developer for a development firm in Phoenix, Arizona. I excel in both front-end and back-end
+                        development and have worked in many programming languages.
+                    </p>
                     <!-- <a
                         class="btn btn-outline-primary" role="button" href="hire-me.html">Hire me</a> -->
                 </div>
@@ -43,24 +54,30 @@
                     </div>
                     <div class="item">
                         <div class="row">
-                            <div class="col-md-6">
-                                <h3>Development Intern</h3>
-                                <h4 class="organization">Neudesic</h4>
-                            </div>
-                            <div class="col-md-6"><span class="period">08/2019 - 05/2020</span></div>
-                        </div>
-                        <p class="text-muted">While interning at Neudesic I worked in Angular 2+ and C#. While working on these I created API endpoints and webpages.</p>
-                    </div>
-                    <div class="item">
-                        <div class="row">
                             <div class="col-6">
                                 <h3>Web Developer</h3>
                                 <h4 class="organization">Aim IT Services LLC.</h4>
                             </div>
                             <div class="col-md-6"><span class="period">07/2020 - Present</span></div>
                         </div>
-                        <p class="text-muted">At Aim IT Services I have worked on multiple project in a wide array of uses from business driven applications to user driven applications. I have gained experience in differnt JavaScript frameworks, back-end design patterns, and
-                            database structuring.</p>
+                        <p class="text-muted">
+                            At Aim IT Services I have worked on multiple projects with a wide array of uses, from 
+                            business driven applications to user driven applications. I have gained experience in
+                            differnt JavaScript frameworks, back-end design patterns, and database structuring.
+                        </p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <h3>Development Intern</h3>
+                                <h4 class="organization">Neudesic</h4>
+                            </div>
+                            <div class="col-12 col-md-6"><span class="period">08/2019 - 05/2020</span></div>
+                        </div>
+                        <p class="text-muted">
+                            While interning at Neudesic, I worked in Angular 2+ and C#. While working on these
+                            projects, I created API endpoints and webpages.
+                        </p>
                     </div>
                 </div>
                 <div class="education group">
@@ -69,20 +86,20 @@
                     </div>
                     <div class="item">
                         <div class="row">
-                            <div class="col-md-6">
-                                <h3>High School</h3>
-                                <h4 class="organization">Madera South Highschool</h4>
+                            <div class="col-12 col-md-8">
+                                <h3>Bachelor of Science in Computer Programing</h3>
+                                <h4 class="organization">Grand Canyon University</h4>
                             </div>
-                            <div class="col-6"><span class="period">05/2016</span></div>
+                            <div class="col-12 col-md-4"><span class="period">&nbsp;03/2021</span></div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>BS in Computer Programing</h3>
-                                <h4 class="organization">Grand Canyon University</h4>
+                                <h3>High School</h3>
+                                <h4 class="organization">Madera South Highschool</h4>
                             </div>
-                            <div class="col-md-6"><span class="period">&nbsp;03/2021</span></div>
+                            <div class="col-6"><span class="period">05/2016</span></div>
                         </div>
                     </div>
                 </div>
@@ -122,11 +139,19 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-ios-telephone icon"></i></div>
-                                    <div class="col-9"><span>(602) 531-0822</span></div>
+                                    <div class="col-9">
+                                        <span>
+                                            <a href="tel:6025310822" style="color:#212529">(602) 531-0822</a>
+                                        </span>
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-at icon"></i></div>
-                                    <div class="col-9"><span>jon.nungaray@gmail.com</span></div>
+                                    <div class="col-9">
+                                        <span>
+                                            <a href="mailto:jon.nungaray@gmail.com" style="color:#212529">jon.nungaray@gmail.com</a>
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -136,7 +161,10 @@
                     <div class="heading">
                         <h2 class="text-center">Hobbies</h2>
                     </div>
-                    <p class="text-center text-muted">Outside of development I like to spend my time playing Tetris for the Nintendo Enteratinment System. It is a game that takes skill and quick decision making, keeping my brain sharp.</p>
+                    <p class="text-center text-muted">
+                        Outside of development, I like to spend my time playing Tetris. It is a game that takes focus and quick
+                        decision making, skills that I utilize on a daily basis as a programmer.
+                    </p>
                 </div>
             </div>
         </section>
