--- a/senior-project.html
+++ b/senior-project.html
@@ -13,13 +13,16 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="index.html">JNungaray</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="index.html">JNungaray</a>
+            <button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">
+                Toggle navigation</span><span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse"
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="projects.html">Projects</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">Resume</a></li>
                 </ul>
             </div>
         </div>
@@ -36,20 +39,36 @@
                         The video is not supported
                     </video>
                 </div>
-                <div class="row">
+                <div class="row mb-3">
                     <div class="col-12 col-md-6 offset-md-1 info">
-                        <h3>Description</h3>
-                        <p>For my senior project I wanted to create a messaging app that takes security as its top priority. The goal was full encryption from end to end with temporary messages that only persisted long enough to be viewed by the user.</p>
-                        <p>Ultimately not all our goals were met, however we able to successfully create a messaging application that did encrypt its messages. The only missing piece was having messages leave after being viewed.</p>
+                        <h3 class="mb-2">Description</h3>
+                        <p>
+                            For my senior project I wanted to create a messaging app that takes security as its top priority.
+                            The goal was full encryption from end to end, with temporary messages that only persisted long enough 
+                            to be viewed by the user.
+                        </p>
+                        <p>
+                            Ultimately not all of our goals were met. However, we were able to successfully create a messaging
+                            application that encrypted its messages. The only missing piece was having messages leave after being
+                            viewed.
+                        </p>
                     </div>
                     <div class="col-12 col-md-3 offset-md-1 meta">
-                        <div class="tags">
+                        <div class="tags mb-3">
                             <span class="meta-heading">Git Links</span>
                             <a href="https://github.com/JNungaray/SeniorProjectApi" target="_blank">API</a>
                             <a href="https://github.com/JNungaray/SeniorProject" target="_blank">Client</a>
+                        </div>
+                        <div class="tags">
                             <span class="meta-heading">Date</span>
                             <span>03-27-2017</span>
                         </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 offset-md-1 info">
+                        <h3>Screenshots</h3>
+                        <img src="">
                     </div>
                 </div>
             </div>
