--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="projects.html">Projects</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">Resume</a></li>
                 </ul>
             </div>
         </div>
@@ -29,7 +29,12 @@
             <div class="container">
                 <div class="avatar" style="background-image:url('assets/img/avatars/avatar.jpg');"></div>
                 <div class="about-me">
-                    <p>Hello! I am <strong>Jonathan Nungaray</strong>. I am a software developer and excel in both front-end and back-end development.</p><a class="btn btn-outline-primary" role="button" href="projects.html">View my projects</a></div>
+                    <p>
+                        Hello! I am <strong>Jonathan Nungaray</strong>.
+                        I am a software developer and excel in both front-end and back-end development.
+                    </p>
+                    <a class="btn btn-outline-primary" role="button" href="projects.html">View my projects</a>
+                </div>
             </div>
         </section>
     </main>
@@ -38,7 +43,11 @@
             <div class="row align-items-center">
                 <div class="col-md-12 col-lg-5 offset-lg-1 text">
                     <h3>Website Projects</h3>
-                    <p>Want to hire me to make your vision a reality? Contact me with a small explaination of what you are wanting and we will find what works best for you. I can make you a site that fits your needs at a price you can afford.</p>
+                    <p>
+                        Want me to make your vision a reality? Contact me with a small
+                        explaination of what you want. We can collaberate to make 
+                        you a site that fits your needs at a price within your budget.
+                    </p>
                 </div>
                 <div class="col-md-12 col-lg-5">
                     <div class="portfolio-laptop-mockup">
