--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="projects.html">Projects</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">Resume</a></li>
                 </ul>
             </div>
         </div>
@@ -34,8 +34,8 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="project-card-no-image">
                             <h3>Senior Project</h3>
-                            <h4>This is my senior project done for my final college course</h4><a class="btn btn-outline-primary btn-sm" role="button" href="senior-project.html">See More</a>
-                            <div class="tags"><span style="color:grey">Vue PHP</span></div>
+                            <h4>An encrypted messaging application using a Vue client and PHP API</h4><a class="btn btn-outline-primary btn-sm" role="button" href="senior-project.html">See More</a>
+                            <div class="tags"><span style="color:grey">Vue/PHP</span></div>
                         </div>
                     </div>
                 </div>
