--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
     </section>
-    <footer class="page-footer">
+    <footer class="page-footer mb-3">
         <div class="container">
             <a href="mailto:jon.nungaray@gmail.com">Contact me</a><a href="projects.html">Projects</a></div>
         </div>
