--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer mb-3">
         <div class="container">
             <a href="mailto:jon.nungaray@gmail.com">Contact me</a><a href="projects.html">Projects</a></div>
         </div>
