--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     </nav>
-    <main class="page cv-page">
+    <main class="page cv-page mx-2">
         <section class="portfolio-block block-intro border-bottom">
             <div class="container">
                 <div class="avatar" style="background-image:url(&quot;assets/img/avatars/avatar.jpg&quot;);"></div>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="group">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-3">
                             <div class="skills portfolio-info-card">
                                 <h2>Skills</h2>
                                 <h3>PHP</h3>
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-3">
                             <div class="contact-info portfolio-info-card">
                                 <h2>Contact Info</h2>
                                 <div class="row">
@@ -169,7 +169,7 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer mb-3 mb-3">
         <div class="container">
             <a href="mailto:jon.nungaray@gmail.com">Contact me</a><a href="projects.html">Projects</a></div>
         </div>
