--- a/senior-project.html
+++ b/senior-project.html
@@ -65,10 +65,80 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 col-md-6 offset-md-1 info">
+                <div class="row d-block d-md-none d-lg-none d-xl-none">
+                    <div class="col-12 info">
                         <h3>Screenshots</h3>
-                        <img src="">
+                        <button
+                            class="btn btn-primary" type="button" data-toggle="collapse"
+                            data-target="#screenshotCollapse" aria-expanded="false"
+                            aria-controls="screenshotCollapse"
+                        >
+                            Show screenshots
+                        </button>
+                        <div class="collapse multi-collapse mt-3" id="screenshotCollapse">
+                            <h4>Logged Out</h4>
+                            <div class="row">
+                                <div class="col-12">
+                                    <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/login.jpeg">
+                                </div>
+                                <div class="col-12">
+                                    <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/register.jpeg">
+                                </div>
+                                <div class="col-12">
+                                    <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/nav_loggedout.jpeg">
+                                </div>
+                            </div>
+                            <h4>Logged In</h4>
+                            <div class="row">
+                                <div class="col-12">
+                                    <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/home.jpeg">
+                                </div>
+                                <div class="col-12">
+                                    <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/chat.jpeg">
+                                </div>
+                                <div class="col-12">
+                                    <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/chat2.jpeg">
+                                </div>
+                                <div class="col-12">
+                                    <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/nav_loggedin.jpeg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-none d-md-block d-lg-block d-xl-block">
+                    <div class="col-md-12 info">
+                        <h3>Screenshots</h3>
+                        <h4>Logged Out</h4>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/nav_loggedout.jpeg">
+                            </div>
+                            <div class="col-md-3">
+                                <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/login.jpeg">
+                            </div>
+                            <div class="col-md-3">
+                                <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/register.jpeg">
+                            </div>
+                            <div class="col-md-3">
+                                <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/FAQ.jpeg">
+                            </div>
+                        </div>
+                        <h4>Logged In</h4>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/nav_loggedin.jpeg">
+                            </div>
+                            <div class="col-md-3">
+                                <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/home.jpeg">
+                            </div>
+                            <div class="col-md-3">
+                                <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/chat.jpeg">
+                            </div>
+                            <div class="col-md-3">
+                                <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/chat2.jpeg">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
