Added design documentation

--- a/senior-project.html
+++ b/senior-project.html
@@ -65,6 +65,38 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mb-3">
+                    <div class="col-12 col-md-6 offset-md-1 info">
+                        <h3 class="mb-2">Background</h3>
+                        <p>
+                            When I first started this jourey for my senior project I reached out to my co-workers and fellow
+                            developers to get some ideas for a good application. There were a few good ones, but the one that
+                            stood out to me was the suggestion of a completely encrypted messaging application. We talked in
+                            length of what we would want the project to be and the many interesting functionalities that it could
+                            hold. Eventually when I started writing up the project and the expectations that I held for it, the
+                            list was extensive and far more than I could handle in the given time frame. After some decision making
+                            I was able to dwindle it down to its core funcitonality as a proof of concept with future changes that
+                            are left out of scope for the time being.
+                        </p>
+                        <p>
+                            The final product is something that I am proud of for the time given to me. I was able to create an
+                            application that a user can register to, login, search for other users, and send/recieve messages. This
+                            on its own proved to have some problems as the projected started coming together. The original design
+                            did not include any form of saved messages or users for that matter. With the lack of a database the
+                            application was almost useless. Once a database was integrated problems began as I had to find a way
+                            to properly let my JavaScript based Vue project to connect to my database. After consulting with
+                            my coworkers I added an API to my project using PHP.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-3 offset-md-1 meta">
+                        <div class="tags mb-3">
+                            <span class="meta-heading">Download Design Documents</span>
+                            <a href="assets/docs/projects/senior-project/Project Proposal.docx" download>Project Proposal</a>
+                            <a href="assets/docs/projects/senior-project/Final Architecture Plan.docx" download>Final Architecture Plan</a>
+                            <a href="assets/docs/projects/senior-project/System Admin Guide.docx" download>System Admin Guide</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="row d-block d-md-none d-lg-none d-xl-none">
                     <div class="col-12 info">
                         <h3>Screenshots</h3>
