--- a/senior-project.html
+++ b/senior-project.html
@@ -33,8 +33,8 @@
                 <div class="heading">
                     <h2>Senior project</h2>
                 </div>
-                <div class="image">
-                    <video style="width: 100%; height: auto;">
+                <div class="mb-3">
+                    <video style="width: 100%; height: auto;" controls>
                         <source src="assets/videos/presentation.mp4" type="video/mp4">
                         The video is not supported
                     </video>
@@ -118,6 +118,9 @@
                                 </div>
                                 <div class="col-12">
                                     <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/nav_loggedout.jpeg">
+                                </div>
+                                <div class="col-12">
+                                    <img class="image" style="height: auto;" src="/assets/img/projects/senior-project/FAQ.jpeg">
                                 </div>
                             </div>
                             <h4>Logged In</h4>
