add video presentation

--- a/senior-project.html
+++ b/senior-project.html
@@ -34,10 +34,8 @@
                     <h2>Senior project</h2>
                 </div>
                 <div class="mb-3">
-                    <video style="width: 100%; height: auto;" controls>
-                        <source src="assets/videos/presentation.mp4" type="video/mp4">
-                        The video is not supported
-                    </video>
+                    <iframe src="https://drive.google.com/file/d/1fwULRECasRhTujQ1bBVRkn0tsnxrRGVy/preview"
+                    style="width: 100%; height: auto;"></iframe>
                 </div>
                 <div class="row mb-3">
                     <div class="col-12 col-md-6 offset-md-1 info">
