added video embbed through s3

--- a/senior-project.html
+++ b/senior-project.html
@@ -33,9 +33,10 @@
                 <div class="heading">
                     <h2>Senior project</h2>
                 </div>
-                <div class="mb-3">
-                    <iframe src="https://drive.google.com/file/d/1fwULRECasRhTujQ1bBVRkn0tsnxrRGVy/preview"
-                    style="width: 100%; height: auto;"></iframe>
+                <div class="mb-3 text-center">
+                    <video controls="controls" style="width:100%; height: auto;">
+                        <source src="https://projectvideodemo.s3.us-east-2.amazonaws.com/presentation.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="row mb-3">
                     <div class="col-12 col-md-6 offset-md-1 info">
